初步api串接:路線/班次

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,7 +12,7 @@ body{
   .home, .schedule-page, .time-arrival-page, .search-page{
     min-height: $phone-height;
     @media (max-width: 768px){
-      height: $phone-height;
+      min-height: $phone-height;
     }
   }
 }
