--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -186,3 +186,25 @@ body{
     }
   }
 }
+.time-arrival-map-page{
+  .bus-stop-icon{
+    background-position: 0 0;
+    margin-left:         -12px !important;
+    margin-top:          -12px !important;
+    width:               12px;
+    height:              12px;
+    transform:           translate3d(639px, -44px, 0px);
+    z-index:             -44;
+  }
+  .bus-stop-circle{
+    font-size:       16px;
+    width:           24px;
+    height:          24px;
+    background:      #019EB1;
+    color:           white;
+    display:         flex;
+    justify-content: center;
+    align-items:     center;
+    border-radius:   50%;
+  }
+}
