--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -2,14 +2,15 @@
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~bootstrap-vue/dist/bootstrap-vue.css';
 @import "~fontawesome-4.7/css/font-awesome.css";
-$main-color:   #939499;
+@import '~vue-select/dist/vue-select.css';
+$main-gray:    #939499;
 $main-yellow:  #F6E04F;
 $main-green:   #007982;
-$phone-height: calc(100vh - 101px);
+$phone-height: calc(100vh - 103px);
 body{
   font-size:   16px;
   font-family: Microsoft JhengHei;
-  .home, .schedule-page, .time-arrival-page, .search-page{
+  .schedule-page, .time-arrival-page, .search-page{
     min-height: $phone-height;
     @media (max-width: 768px){
       min-height: $phone-height;
@@ -20,37 +21,110 @@ body{
   margin: 0;
 }
 .footer{
-  background-color: #939499;
+  background-color: $main-gray;
   height:           40px;
   position:         absolute;
   width:            100%;
 }
 .home{
-  background-image: url("../images/PhoneBg.svg");
+  background-image: url("../images/home.svg");
   background-size:  cover;
-  height:           calc(100vh - 125px);
+  height:           calc(100vh - 111px);
+  display:          flex;
+  flex-direction:   column;
+  align-items:      flex-end;
+  justify-content:  flex-end;
+  padding-bottom:   3em;
+  @media (max-width: 768px){
+    background-position: 28% 100%;
+    min-height:          $phone-height;
+  }
+  .county-select{
+    margin:      0 14px -14px;
+    width:       270px;
+    background:  #F6E04F;
+    position:    relative;
+    display:     flex;
+    align-items: center;
+    padding:     0.5em 1.5em !important;
+    .fa-map-marker{
+      color:     $main-gray;
+      font-size: 30px;
+    }
+    .vs__dropdown-toggle{
+      border:        none;
+      border-radius: 0;
+      font-size:     24px;
+      width:         calc(240px - 1em);
+      .vs__selected, .vs__search, .vs__search:focus{
+        padding-left: 1em;
+        color:        $main-gray;
+        font-weight:  bold;
+      }
+      .vs__clear{
+        opacity: 0;
+      }
+    }
+    @media (max-width: 768px){
+      margin: 0 12px -12px !important;
+      width:  225px !important;
+      .vs__dropdown-toggle{
+        width: calc(225px - 2em);
+        .vs__selected, .vs__search, .vs__search:focus{
+          padding-left: 0;
+        }
+      }
+    }
+  }
+  .gray-box a{
+    font-size:        28px;
+    font-weight:      bold;
+    background-color: #939499;
+    width:            270px;
+    padding:          0.5em 1.5em;
+    color:            white;
+    margin:           0.5em;
+    display:          flex;
+    align-items:      center;
+    transition:       all 0.2s;
+    .fa{
+      margin-left: 15px;
+    }
+    &:hover, &:focus{
+      cursor:          pointer;
+      opacity:         0.8;
+      transform:       scale(0.95);
+      transition:      all 0.2s;
+      text-decoration: none;
+    }
+    @media (max-width: 768px){
+      font-size: 1.5em !important;
+      width:     225px !important;
+    }
+  }
 }
 .navbar{
-  background-color: #939499 !important;
-  padding-top:      1.5em;
-  .navbar-brand{
-    color:       #F6E04F;
-    font-weight: bold;
-    font-size:   1.8em;
-  }
-  .nav-link a{
-    font-size: 1.4em;
-    color:     white !important;
-    margin:    0 1em;
+  background-color: $main-gray !important;
+  a{
+    color:           white;
+    text-decoration: none;
     &:hover{
-      opacity:         0.9;
-      transform:       scale(0.95);
-      text-decoration: none;
+      opacity: 0.8;
+    }
+  }
+  .navbar-brand a{
+    color:     $main-yellow;
+    font-size: 30px;
+  }
+  .navbar-nav .nav-link{
+    color: white;
+    a{
+      font-size: 22px;
+      margin:    0 1em;
     }
   }
   .right-nav-item .nav-link a{
-    font-size: 1.1em;
-    margin:    0 1em;
+    font-size: 16px;
   }
   @media (max-width: 768px){
     padding-top: 0;
@@ -58,7 +132,6 @@ body{
     .nav-link, .right-nav-item .nav-link{
       text-align: center;
       margin:     0;
-      font-size:  1.2em;
     }
   }
 }
